--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,8 @@ env/
 ENV/
 arome/
 
+# Output data files
+output/
 test_output/
 *.tiff
 *.mbtiles
@@ -35,6 +37,5 @@ logs/
 bounds.txt
 README.txt
 viewer.html 
-
 
 plan.txt
