--- a/.github/workflows/daily-data-processing.yml
+++ b/.github/workflows/daily-data-processing.yml
@@ -19,22 +19,59 @@ jobs:
       with:
         python-version: '3.12'  # or the version you're using
         
-    - name: Install dependencies
+    - name: Install system dependencies
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y libgdal-dev
+        
+    - name: Install Python dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r requirements.txt
+        pip install rasterio==1.4.3
+        pip install pyproj==3.7.1 mercantile==1.2.1 numpy==2.2.4 pillow==11.1.0 scipy==1.15.2 requests==2.32.3
         
     - name: Create output directory
       run: |
         mkdir -p output
         
+    - name: List directory structure for debugging
+      run: |
+        pwd
+        echo "Current directory: $(pwd)"
+        echo "Contents of repository root:"
+        ls -la
+        echo "Contents of scripts directory:"
+        ls -la scripts/
+        echo "Python version:"
+        python --version
+        echo "Installed packages:"
+        pip list
+        
     - name: Run AROME data processing
       run: |
-        python scripts/process_all.py --output-dir output --parallel 2
+        cd scripts
+        python run_in_github.py --output-dir $GITHUB_WORKSPACE/output --parallel 2 --min-zoom 4 --max-zoom 8
       
+    - name: Create file list
+      if: always()
+      run: |
+        echo "Files in output directory:"
+        ls -la output/
+        
     - name: Upload processed data
+      if: success()
       uses: actions/upload-artifact@v3
       with:
         name: arome-mbtiles
         path: output/*.mbtiles
-        retention-days: 3  # Keep files for 3 days 
+        retention-days: 3  # Keep files for 3 days
+        
+    - name: Upload log files on failure
+      if: failure()
+      uses: actions/upload-artifact@v3
+      with:
+        name: logs
+        path: |
+          *.log
+          scripts/*.log
+        retention-days: 1 
