--- a/.github/workflows/daily-data-processing.yml
+++ b/.github/workflows/daily-data-processing.yml
@@ -58,7 +58,29 @@ jobs:
         echo "Files in output directory:"
         ls -la output/
         
-    - name: Upload processed data
+    # Get current date for release tag and name
+    - name: Get current date
+      id: date
+      run: echo "date=$(date +'%Y-%m-%d')" >> $GITHUB_OUTPUT
+        
+    # Create a GitHub release with the generated MBTiles files
+    - name: Create Release
+      uses: softprops/action-gh-release@v1
+      if: success()
+      with:
+        tag_name: arome-${{ steps.date.outputs.date }}
+        name: AROME Data ${{ steps.date.outputs.date }}
+        body: |
+          AROME vertical velocity data for ${{ steps.date.outputs.date }}
+          
+          This release contains MBTiles files for AROME vertical velocity data at pressure levels 500-900 hPa and hours 07:00-21:00.
+          
+          Files can be opened in QGIS or any other software that supports the MBTiles format.
+        files: output/*.mbtiles
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    
+    - name: Upload processed data as artifacts (backup)
       if: success()
       uses: actions/upload-artifact@v4
       with:
