--- a/.github/workflows/daily-data-processing.yml
+++ b/.github/workflows/daily-data-processing.yml
@@ -6,6 +6,10 @@ on:
     - cron: '30 1 * * *'
   workflow_dispatch:  # Allow manual triggering
 
+# Add permissions section to allow creating releases
+permissions:
+  contents: write
+  
 jobs:
   process-arome-data:
     runs-on: ubuntu-latest
