Update logging levels in geotiff2mbtiles.py to DEBUG for detailed processing insights. Modify run_in_github.py to allow dynamic log level configuration via command-line argument and adjust daily data processing workflow to reflect changes in script execution parameters.

--- a/.github/workflows/daily-data-processing.yml
+++ b/.github/workflows/daily-data-processing.yml
@@ -54,7 +54,7 @@ jobs:
     - name: Run AROME data processing
       run: |
         cd scripts
-        python run_in_github.py --output-dir $GITHUB_WORKSPACE/output --parallel 2 --min-zoom 4 --max-zoom 8 --forecast-days 0 1
+        python run_in_github.py --output-dir $GITHUB_WORKSPACE/output --parallel 1 --min-zoom 4 --max-zoom 8 --forecast-days 0 1 --log-level INFO
       
     - name: Create file list
       if: always()
