--- a/.github/workflows/daily-data-processing.yml
+++ b/.github/workflows/daily-data-processing.yml
@@ -51,10 +51,17 @@ jobs:
         echo "Installed packages:"
         pip list
         
-    - name: Run AROME data processing
+    # Get current date for release tag
+    - name: Get current date
+      id: date
+      run: echo "date=$(date +'%Y-%m-%d')" >> $GITHUB_OUTPUT
+        
+    - name: Run AROME data processing with incremental release
       run: |
         cd scripts
-        python run_in_github.py --output-dir $GITHUB_WORKSPACE/output --parallel 1 --min-zoom 4 --max-zoom 8 --forecast-days 0 1 --log-level INFO
+        python run_in_github.py --output-dir $GITHUB_WORKSPACE/output --parallel 1 --min-zoom 4 --max-zoom 8 --forecast-days 0 1 --log-level INFO --release-tag arome-${{ steps.date.outputs.date }}
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       
     - name: Create file list
       if: always()
@@ -62,33 +69,6 @@ jobs:
         echo "Files in output directory:"
         ls -la output/
         
-    # Get current date for release tag and name
-    - name: Get current date
-      id: date
-      run: echo "date=$(date +'%Y-%m-%d')" >> $GITHUB_OUTPUT
-        
-    # Create a GitHub release with the generated MBTiles files
-    - name: Create Release
-      uses: softprops/action-gh-release@v1
-      if: success()
-      with:
-        tag_name: arome-${{ steps.date.outputs.date }}
-        name: AROME Data ${{ steps.date.outputs.date }}
-        body: |
-          AROME vertical velocity data for ${{ steps.date.outputs.date }}
-          
-          This release contains MBTiles files for:
-          - Today's forecast (${{ steps.date.outputs.date }})
-          - Tomorrow's forecast ($(date -d "${{ steps.date.outputs.date }} + 1 day" +'%Y-%m-%d'))
-          
-          Pressure levels: 500-900 hPa
-          Hours: 05:00-21:00 UTC
-          
-          Files can be opened in QGIS or any other software that supports the MBTiles format.
-        files: output/*.mbtiles
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-    
     - name: Upload processed data as artifacts (backup)
       if: success()
       uses: actions/upload-artifact@v4
