--- a/.github/workflows/daily-wind-components.yml
+++ b/.github/workflows/daily-wind-components.yml
@@ -23,10 +23,16 @@ jobs:
       with:
         python-version: '3.12'  # or the version you're using
 
+    - name: Install system dependencies
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y libgdal-dev
+
     - name: Install Python dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install requests==2.32.3
+        pip install rasterio==1.4.3
+        pip install pyproj==3.7.1 mercantile==1.2.1 numpy==2.2.4 pillow==11.1.0 scipy==1.15.2 requests==2.32.3
 
     - name: Create output directory
       run: |
