Update README and scripts to download only today's wind component TIFF files
Modified the README to clarify that the workflow downloads raw U and V wind component TIFF files for today only. Updated the daily-wind-components workflow and the run_wind_components_github.py script to reflect this change by adjusting the forecast-days argument to only include today.

--- a/.github/workflows/daily-wind-components.yml
+++ b/.github/workflows/daily-wind-components.yml
@@ -59,7 +59,7 @@ jobs:
     - name: Download AROME wind components
       run: |
         cd scripts
-        python run_wind_components_github.py --output-dir $GITHUB_WORKSPACE/wind_components --forecast-days 0 1 --log-level INFO --release-tag arome-${{ steps.date.outputs.date }}
+        python run_wind_components_github.py --output-dir $GITHUB_WORKSPACE/wind_components --forecast-days 0 --log-level INFO --release-tag arome-${{ steps.date.outputs.date }}
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
